# rust-chat-grpc

./: Cargo.toml
proto/: chat.proto
src/: client.rs  server.rs
